# manufactured_sol

./: README.md
external_mms/: README.md  pyproject.toml
external_mms/examples/: approved_scientist.json  report.json
external_mms/external_mms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
external_mms/mms_agent/: __init__.py  ansatz_generator.py  approved_scientist_adapter.py  cli.py  geometry.py  ir_builder.py  llm_agent.py  operator_registry.py  report_builder.py  residual_checker.py  schemas.py  strict_preservation.py  symbolic_context.py  symbolic_solver.py  tensor_ops.py  weak_form_checker.py
external_mms/tests/: test_adapter.py  test_cook_strict_smoke.py  test_geometry.py  test_llm_agent.py  test_tensor_ops.py
